# Hltn-advance-mapping

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_plugin.ps1
data/: edge_blend.effect
data/locale/: en-US.ini
src/: editor-window.cpp  editor-window.h  plugin-main.cpp  warp-mesh.cpp  warp-mesh.h
